--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
   "author": "your_name <your.email@domain.com>",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^6.0.3",
+    "@babel/core": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^3.6.0",
-    "eslint": "^7.4.0",
-    "html-webpack-plugin": "^4.3.0",
+    "eslint": "^7.26.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.2",
     "jasmine-ajax": "^4.0.0",
-    "jasmine-core": "^3.5.0",
-    "karma": "^5.1.0",
+    "jasmine-core": "^3.7.1",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^3.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
+    "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^4.0.2",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
+    "style-loader": "^1.3.0",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.0.9",
-    "whatwg-fetch": "^3.2.0"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3",
+    "whatwg-fetch": "^3.6.2"
   },
   "dependencies": {
     "regenerator-runtime": "^0.13.5"
