--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,8 @@
         "no-underscore-dangle": 0,
         "no-restricted-globals": 0,
         "linebreak-style": 0,
-        "no-param-reassign": 0
+        "no-param-reassign": 0,
+        "no-undef": 0,
+        "consistent-return": 0,
     }
 }
