--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start-dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "test": "karma start",
-    "e2e": "codeceptjs run --steps"
+    "e2e": "codeceptjs run --steps",
+    "build-image": "node sharp.js",
+    "start-node-server": "node server.js"
   },
   "keywords": [],
   "author": "your_name <your.email@domain.com>",
@@ -24,6 +26,8 @@
     "eslint-plugin-import": "^2.23.4",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "jasmine-ajax": "^4.0.0",
     "jasmine-core": "^3.7.1",
     "karma": "^5.2.3",
@@ -33,6 +37,7 @@
     "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^4.0.2",
     "puppeteer": "^10.1.0",
+    "sharp": "^0.28.3",
     "style-loader": "^1.3.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
