--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "sharp": "^0.28.3",
     "style-loader": "^1.3.0",
     "webpack": "^4.46.0",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3",
