--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3",
-    "whatwg-fetch": "^3.6.2",
-    "workbox-webpack-plugin": "^6.1.5"
+    "whatwg-fetch": "^3.6.2"
   },
   "dependencies": {
     "idb": "^6.1.2",
