--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,5 +20,6 @@
         "no-param-reassign": 0,
         "no-undef": 0,
         "consistent-return": 0,
+        "no-prototype-builtins": 0
     }
 }
